--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
-      <h1>Ouija</h1>
+      <h1>You Shall Not Pass!</h1>
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
@@ -107,7 +107,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=88" rel="prev">
+        <a href="/?id=90" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -136,7 +136,7 @@
       </nav>
 
       <div id="comic-strip">
-        <img src="/comics/89/89-ouija-0.webp" alt="Cartoon with two people around an ouija board, they are reading C - E - N - T - E - R" />
+        <img src="/comics/91/91-you-shall-not-pass-0.webp" alt="Cartoon parody of The Lord of the Rings, showing a bridge with a horned monster on one side carrying a box with the HTML element center inside. On the other side of the bridge, there's a gray-cloaked wizard holding a sword and a stick saying 'You shall not pass!!', protecting the HTML5 logo." />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -146,7 +146,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=88" rel="prev">
+        <a href="/?id=90" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -175,9 +175,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=89">https://comicss.art/?id=89</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/89/ouija.png">hhttps://comicss.art/comics/89/ouija.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/89/ouija.html" rel="alternate">https://comicss.art/comics/89/ouija.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=91">https://comicss.art/?id=91</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/91/you-shall-not-pass.png">hhttps://comicss.art/comics/91/you-shall-not-pass.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/91/you-shall-not-pass.html" rel="alternate">https://comicss.art/comics/91/you-shall-not-pass.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -208,7 +208,7 @@
       &mdash; <a href="/rss.xml">RSS Feed</a>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-05-22"></script>
+    <script src="/js/data.js?last-updated=2023-05-29"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
