--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Riddle</h1>
+      <h1>Nightmare</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=109" rel="prev">
+        <a href="/?id=110" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,9 +137,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Card with a cartoon of Santa Claus and the question 'Who comes in Christmas and says Oh Oh Oh?' Clicking/tapping on the card will flip it 180 degrees revealing the answer: Santa Claus with a rotateY(180deg)">
-        <img src="/comics/110/110-riddle-0.webp" alt="" />
-        <img src="/comics/110/110-riddle-1.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with two panels. In the first panel, a white man wakes up yelling from a dream with The New York Thymes newspaper announcing 'W3C Shocks Internet: Tailwind Replaces CSS' in big letters. In the second panel, an off-screen person says 'Wow! That must have been a heck of a nightmare', to which the previous character replies 'How am I supposed to know? I am just a React Developer!'">
+        <img src="/comics/111/111-nightmare-0.webp" alt="" />
+        <img src="/comics/111/111-nightmare-1.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -149,7 +149,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=109" rel="prev">
+        <a href="/?id=110" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +178,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=110">https://comicss.art/?id=110</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/110/riddle.png">hhttps://comicss.art/comics/110/riddle.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/110/riddle.html" rel="alternate">https://comicss.art/comics/110/riddle.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=111">https://comicss.art/?id=111</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/111/nightmare.png">hhttps://comicss.art/comics/111/nightmare.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/111/nightmare.html" rel="alternate">https://comicss.art/comics/111/nightmare.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -218,7 +218,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2023-12-04"></script>
+    <script src="/js/data.js?last-updated=2023-12-11"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
