--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Nightmare</h1>
+      <h1>Eleventy-One</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=110" rel="prev">
+        <a href="/?id=111" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,9 +137,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with two panels. In the first panel, a white man wakes up yelling from a dream with The New York Thymes newspaper announcing 'W3C Shocks Internet: Tailwind Replaces CSS' in big letters. In the second panel, an off-screen person says 'Wow! That must have been a heck of a nightmare', to which the previous character replies 'How am I supposed to know? I am just a React Developer!'">
-        <img src="/comics/111/111-nightmare-0.webp" alt="" />
-        <img src="/comics/111/111-nightmare-1.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon with four vertical panels parodying the farewell speech by Bilbo Baggins in The Lord of the Rings. A hobbit says farewell and disappears during his birthday speech, to the surprise of all the attendants. He then pops back next to his house saying 'Ha! You always work like a charm, my precious friend!' The last panel is a close-up of a ring with the CSS code: 'display: none; opacity: 0; visibility: hidden !important'">
+        <img src="/comics/112/112-eleventy-one-0.webp" alt="" />
+        <img src="/comics/112/112-eleventy-one-1.webp" alt="" />
+        <img src="/comics/112/112-eleventy-one-2.webp" alt="" />
+        <img src="/comics/112/112-eleventy-one-3.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -149,7 +151,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=110" rel="prev">
+        <a href="/?id=111" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +180,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=111">https://comicss.art/?id=111</a></p>
-      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/111/nightmare.png">hhttps://comicss.art/comics/111/nightmare.png</a></p>
-      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/111/nightmare.html" rel="alternate">https://comicss.art/comics/111/nightmare.html</a></p>
+      <p>Permanent link to this comic: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=112">https://comicss.art/?id=112</a></p>
+      <p>Image URL (for hot-linking): <a aria-label="image link" id="image-link" href="https://comicss.art/comics/112/eleventy-one.png">hhttps://comicss.art/comics/112/eleventy-one.png</a></p>
+      <p>Code URL (to view CSS source): <a aria-label="html version" id="code-link" href="https://comicss.art/comics/112/eleventy-one.html" rel="alternate">https://comicss.art/comics/112/eleventy-one.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
