--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>King</h1>
+      <h1>Phantom of the Opera</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=116" rel="prev">
+        <a href="/?id=117" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon of a man with a beard, wearing a crown and holding a sceptre, next to a box with the following CSS code: .king { position: absolute; richness: 100; color: RoyalBlue; :first-child { all: inherit; } }">
-        <img src="/comics/117/117-king-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon of the phantom of the opera (a man with a cape and a mask hiding his face) holding a rose next to the following CSS code: #phantom-of-the-opera { mask:url(#face); backface-visibility:hidden; visibility:hidden; pitch:low; volume:soft; }">
+        <img src="/comics/118/118-phantom-of-the-opera-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=116" rel="prev">
+        <a href="/?id=117" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=117">https://comicss.art/?id=117</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/117/king.png">hhttps://comicss.art/comics/117/king.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/117/king.html" rel="alternate">https://comicss.art/comics/117/king.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=118">https://comicss.art/?id=118</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/118/phantom-of-the-opera.png">hhttps://comicss.art/comics/118/phantom-of-the-opera.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/118/phantom-of-the-opera.html" rel="alternate">https://comicss.art/comics/118/phantom-of-the-opera.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-02-03"></script>
+    <script src="/js/data.js?last-updated=2024-02-04"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
