--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Neo</h1>
+      <h1>Transformer</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=124" rel="prev">
+        <a href="/?id=125" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with a man wearing sunglasses and a long robe with Japanese characters falling behind him (like in The Matrix). Next to the following CSS code: #Neo { will-change: all; all: unset; transform: matrix(1, 0, 1, 0, 1, 1); &::after { all: revert; } }">
-        <img src="/comics/125/125-neo-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon of Optimus Prime (a robot character from the Transformers series) next to the following CSS code: .autobot, .decepticon { font-family: roboto; appearance: auto; will-change: appearance, transform; transform: scale(0.5); }">
+        <img src="/comics/126/126-transformer-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=124" rel="prev">
+        <a href="/?id=125" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=125">https://comicss.art/?id=125</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/125/neo.png">hhttps://comicss.art/comics/125/neo.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/125/neo.html" rel="alternate">https://comicss.art/comics/125/neo.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=126">https://comicss.art/?id=126</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/126/transformer.png">hhttps://comicss.art/comics/126/transformer.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/126/transformer.html" rel="alternate">https://comicss.art/comics/126/transformer.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-02-29"></script>
+    <script src="/js/data.js?last-updated=2024-03-05"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
