--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>PR Reviews</h1>
+      <h1>Layers</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=126" rel="prev">
+        <a href="/?id=127" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,9 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Cartoon with two panels title Web developers reviewing JS and 'CSS' (CSS is quoted). The first panel shows an angry-looking person saying 'Wow!! Four parameters in a function call??!! That's way too many!!! PR rejected!'. The second panel shows the same person reading a really long list of Tailwind class names and saying 'That CSS class looks stylish! Approved!'">
-        <img src="/comics/127/127-pr-reviews-0.webp" alt="" />
-        <img src="/comics/127/127-pr-reviews-1.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon showing CSS code with many nested at-layers. Off-panel someone complains that it may be cold but the code doesn't need so many layers">
+        <img src="/comics/128/128-layers-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -149,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=126" rel="prev">
+        <a href="/?id=127" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -178,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=127">https://comicss.art/?id=127</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/127/pr-reviews.png">hhttps://comicss.art/comics/127/pr-reviews.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/127/pr-reviews.html" rel="alternate">https://comicss.art/comics/127/pr-reviews.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=128">https://comicss.art/?id=128</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/128/layers.png">hhttps://comicss.art/comics/128/layers.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/128/layers.html" rel="alternate">https://comicss.art/comics/128/layers.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -204,7 +203,7 @@
         <li><a href="/?id=80"><img width="80" height="80" loading="lazy" decoding="async" src="/images/thumbs/mini-80.webp" alt="" /><span class="a11y-hidden">Comic 80</span></a></li>
       </ul>
     </nav>
-    
+
     <footer>
       Copyright &copy; 2021-2024. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
       &mdash; <a href="/atom.xml">Atom Feed</a>
@@ -218,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-03-11"></script>
+    <script src="/js/data.js?last-updated=2024-03-17"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
